--- a/M2/index.html
+++ b/M2/index.html
@@ -12,7 +12,7 @@
         <input type="text"  placeholder="search job location" id=" searchplace">
 
 
-        <button onclick="ricercaOnclick()"  type="submit">search</button>
+        <button  type="submit">search</button>
 
       <script src="index.js"></script>
       <script src="data.js"></script>
