--- a/M2/index.html
+++ b/M2/index.html
@@ -1,22 +1,23 @@
+<!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    <h2>A LA RECHERCHE DU TRAVAIL</h2>
-    <form id=" submit">
-        <input type="text" placeholder="search job title"  id="searchjob">
-        <input type="text"  placeholder="search job location" id=" searchplace">
+    <form id="form">
 
-
-        <button  type="submit">search</button>
-
-      <script src="index.js"></script>
-      <script src="data.js"></script>
+        <input type="text"="title" id="searchJob" placeholder="search Job"><br>
+        <input type="text"="location" id="searchPlace" placeholder="search Place"><br>
+        <button type="submit">send</button><br>
     </form>
 
+    <script src="data.js"></script>
+    <script src="./script.js"></script>
 </body>
+
 </html>
